--- a/css/master.css
+++ b/css/master.css
@@ -289,13 +289,12 @@ aside {
 
 footer {
   width: 40%;
-  height: 117px;
   color: white;
   bottom: 0;
   position: fixed;
   display: flex;
   z-index: 2;
-  border-radius: 20px;
+  border-radius: 20px 0;
   margin-bottom: 2px;
 }
 
@@ -316,7 +315,7 @@ footer {
   display: table;
   width: 114px;
   opacity: 0;
-  transition: all 1s;
+  transition: all 2s;
 }
 
 .iconSkull {
@@ -334,7 +333,7 @@ footer {
   height: 80px;
   width: 80px;
   margin: 0 auto;
-  transition: all 0.8s;
+  transition: all 2s;
   animation: pulse 4s infinite ease;
   border-radius: 50%;
 }
@@ -350,7 +349,6 @@ footer {
   }
   100% {
     box-shadow: 0 0 0 20px rgba(227, 60, 60, 0);
-
   }
 }
 
@@ -360,11 +358,10 @@ footer {
 
 .action:hover span {
   opacity: 1;
-
 }
 
 .action .actionIcon:hover {
   background-color: rgb(176, 32, 0);
   border-radius: 50%;
-  animation: pulse 1s infinite ;
+  animation: pulse 1s infinite;
 }
