--- a/css/master.css
+++ b/css/master.css
@@ -151,6 +151,7 @@ aside {
   position: absolute;
   left: 25px;
   bottom: 50px;
+  animation: pulse 4s infinite ease;
 }
 
 .sidebar {
@@ -341,11 +342,11 @@ footer {
 @keyframes pulse {
   0% {
     box-shadow: 0 0 0 0 rgba(176, 32, 0, 0.4);
-    background-color: rgba(176, 32, 0, 0.4);
+
   }
   70% {
     box-shadow: 0 0 0 20px rgba(227, 60, 60, 0);
-    ;
+
   }
   100% {
     box-shadow: 0 0 0 20px rgba(227, 60, 60, 0);
