hero action show

--- a/css/master.css
+++ b/css/master.css
@@ -196,6 +196,22 @@ aside {
   width: 100%;
 }
 
+.right-action{
+  position: absolute;
+  right: 220px;
+  top: -203px;
+  color: rgb(176, 32, 0);
+  font-size: 2em;
+  transition: all 0.5s;
+  /* display: none; */
+}
+
+.right-action-show{
+  font-size: 6em;
+  top: 250px;
+}
+
+
 /* slash attack */
 
 .hero {
