--- a/css/master.css
+++ b/css/master.css
@@ -162,6 +162,53 @@ aside {
   z-index: 1;
 }
 
+aside h2 {
+  color: white;
+  margin-top: -6px;
+  text-align: center;
+}
+
+.side-icon {
+  height: 20%;
+
+}
+
+.skullicon-side {
+    background: url('../img/skulla.png') no-repeat;
+      background-position: center;
+      background-size: contain;
+}
+
+.shieldicon-side {
+    background: url('../img/shield.png') no-repeat;
+      background-position: center;
+      background-size: contain;
+}
+
+.jokericon-side {
+    background: url('../img/joker.png') no-repeat;
+      background-position: center;
+      background-size: contain;
+}
+
+.sarmacki-logo {
+  position: absolute;
+  background: url('../img/logos.png') no-repeat;
+    background-position: center;
+    background-size: contain;
+    height: 161px;
+    width: 294px;
+    top: -5px;
+    left: -255px;
+    transition: all 1s;
+}
+.sarmacki-logo a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+
 .aside-button {
   background: rgb(176, 32, 0);
   border-radius: 50%;
@@ -174,7 +221,7 @@ aside {
 }
 
 .sidebar {
-  padding: 100px 0 0 0;
+  padding: 161px 0 0 0;
 }
 
 /* .sidebar ul li {
